@@ -1,5 +1,7 @@
 LIST OF CHANGES
 
+ - add uses_patterned_flowcell attribute to long_info
+
 release 89.1.0
  - Where semantic names are not possible, standard file and directory
    names are based on sha256 digest of the composition JSON
